// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentUpcomingSubPanel renders "current" 1`] = `
<div>
  <div>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex gap-4"
      >
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[127px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Cycle #
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[142px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Status
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              Active
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex-1"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Remaining time
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1 day
            </div>
          </div>
        </div>
      </div>
      <div>
        Configuration
      </div>
    </div>
    <div
      class="mt-12"
    >
      <h2
        class="mb-0 font-heading text-2xl font-medium"
      >
        Treasury & Payouts
      </h2>
      <div
        class="mt-5 flex flex-col items-center gap-4"
      >
        <div
          class="flex w-full items-center gap-4"
        >
          <div
            class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col gap-2"
          >
            <h3
              class="text-grey-60 font-body0 mb-0 whitespace-nowrap text-sm font-medium dark:text-slate-200"
            >
              Treasury balance
            </h3>
            <span
              class="font-heading text-xl font-medium"
            >
              210 ETH
            </span>
          </div>
          <div
            class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col gap-2"
          >
            <h3
              class="text-grey-60 font-body0 mb-0 whitespace-nowrap text-sm font-medium dark:text-slate-200"
            >
              Overflow
            </h3>
            <span
              class="font-heading text-xl font-medium"
            >
              210 ETH
            </span>
          </div>
          <div
            class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col gap-2"
          >
            <h3
              class="mb-0 whitespace-nowrap font-body text-sm font-medium dark:text-slate-200"
            >
              Available to pay out
            </h3>
            <span
              class="font-heading text-xl font-medium"
            >
              210 ETH
            </span>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col pb-8"
        >
          <div
            class="flex items-center justify-between gap-3"
          >
            <h3
              class="mb-0 whitespace-nowrap font-body text-sm font-medium dark:text-slate-200"
            >
              Payouts
            </h3>
            <svg
              aria-hidden="true"
              class="h-6 w-6"
              fill="none"
              role="button"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 12.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 18.75a.75.75 0 110-1.5.75.75 0 010 1.5z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <table
            class="mt-4 w-full"
          >
            <tbody>
              <tr
                class="flex items-center justify-between gap-3 border-b border-grey-200 py-3 dark:border-slate-500"
              >
                <td
                  class="flex items-center gap-3"
                >
                  <div
                    class="h-8 w-8 rounded-full bg-juice-400"
                  />
                  <span
                    class="font-medium"
                  >
                    aeolian.eth
                  </span>
                </td>
                <td
                  class="flex items-center gap-3"
                >
                  <span>
                    210 ETH
                  </span>
                  <span>
                    33%
                  </span>
                </td>
              </tr>
              <tr
                class="flex items-center justify-between gap-3 border-b border-grey-200 py-3 dark:border-slate-500"
              >
                <td
                  class="flex items-center gap-3"
                >
                  <div
                    class="h-8 w-8 rounded-full bg-juice-400"
                  />
                  <span
                    class="font-medium"
                  >
                    wraeth.eth
                  </span>
                </td>
                <td
                  class="flex items-center gap-3"
                >
                  <span>
                    210 ETH
                  </span>
                  <span>
                    33%
                  </span>
                </td>
              </tr>
              <tr
                class="flex items-center justify-between gap-3 border-b border-grey-200 py-3 dark:border-slate-500"
              >
                <td
                  class="flex items-center gap-3"
                >
                  <div
                    class="h-8 w-8 rounded-full bg-juice-400"
                  />
                  <span
                    class="font-medium"
                  >
                    chris.eth
                  </span>
                </td>
                <td
                  class="flex items-center gap-3"
                >
                  <span>
                    210 ETH
                  </span>
                  <span>
                    33%
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
          <button
            class="ant-btn ant-btn-primary mt-6 flex w-fit items-center gap-3 self-end"
            type="button"
          >
            Send payouts
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentUpcomingSubPanel renders "upcoming" 1`] = `
<div>
  <div>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex gap-4"
      >
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[127px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Cycle #
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[142px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Status
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              Active
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex-1"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Cycle length
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1 day
            </div>
          </div>
        </div>
      </div>
      <div>
        Configuration
      </div>
    </div>
    <div
      class="mt-12"
    >
      <h2
        class="mb-0 font-heading text-2xl font-medium"
      >
        Treasury & Payouts
      </h2>
      <div
        class="mt-5 flex flex-col items-center gap-4"
      >
        <div
          class="flex w-full items-center gap-4"
        >
          <div
            class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col gap-2"
          >
            <h3
              class="text-grey-60 font-body0 mb-0 whitespace-nowrap text-sm font-medium dark:text-slate-200"
            >
              Treasury balance
            </h3>
            <span
              class="font-heading text-xl font-medium"
            >
              210 ETH
            </span>
          </div>
          <div
            class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col gap-2"
          >
            <h3
              class="text-grey-60 font-body0 mb-0 whitespace-nowrap text-sm font-medium dark:text-slate-200"
            >
              Overflow
            </h3>
            <span
              class="font-heading text-xl font-medium"
            >
              210 ETH
            </span>
          </div>
          <div
            class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col gap-2"
          >
            <h3
              class="mb-0 whitespace-nowrap font-body text-sm font-medium dark:text-slate-200"
            >
              Available to pay out
            </h3>
            <span
              class="font-heading text-xl font-medium"
            >
              210 ETH
            </span>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col pb-8"
        >
          <div
            class="flex items-center justify-between gap-3"
          >
            <h3
              class="mb-0 whitespace-nowrap font-body text-sm font-medium dark:text-slate-200"
            >
              Payouts
            </h3>
            <svg
              aria-hidden="true"
              class="h-6 w-6"
              fill="none"
              role="button"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 12.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 18.75a.75.75 0 110-1.5.75.75 0 010 1.5z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <table
            class="mt-4 w-full"
          >
            <tbody>
              <tr
                class="flex items-center justify-between gap-3 border-b border-grey-200 py-3 dark:border-slate-500"
              >
                <td
                  class="flex items-center gap-3"
                >
                  <div
                    class="h-8 w-8 rounded-full bg-juice-400"
                  />
                  <span
                    class="font-medium"
                  >
                    aeolian.eth
                  </span>
                </td>
                <td
                  class="flex items-center gap-3"
                >
                  <span>
                    210 ETH
                  </span>
                  <span>
                    33%
                  </span>
                </td>
              </tr>
              <tr
                class="flex items-center justify-between gap-3 border-b border-grey-200 py-3 dark:border-slate-500"
              >
                <td
                  class="flex items-center gap-3"
                >
                  <div
                    class="h-8 w-8 rounded-full bg-juice-400"
                  />
                  <span
                    class="font-medium"
                  >
                    wraeth.eth
                  </span>
                </td>
                <td
                  class="flex items-center gap-3"
                >
                  <span>
                    210 ETH
                  </span>
                  <span>
                    33%
                  </span>
                </td>
              </tr>
              <tr
                class="flex items-center justify-between gap-3 border-b border-grey-200 py-3 dark:border-slate-500"
              >
                <td
                  class="flex items-center gap-3"
                >
                  <div
                    class="h-8 w-8 rounded-full bg-juice-400"
                  />
                  <span
                    class="font-medium"
                  >
                    chris.eth
                  </span>
                </td>
                <td
                  class="flex items-center gap-3"
                >
                  <span>
                    210 ETH
                  </span>
                  <span>
                    33%
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
          <button
            class="ant-btn ant-btn-primary mt-6 flex w-fit items-center gap-3 self-end"
            type="button"
          >
            Send payouts
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentUpcomingSubPanel renders a skeleton when loading "current" 1`] = `
<div>
  <div>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex gap-4"
      >
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[127px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Cycle #
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[142px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Status
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              Active
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex-1"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Remaining time
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1 day
            </div>
          </div>
        </div>
      </div>
      <div>
        Configuration
      </div>
    </div>
    <div
      class="mt-12"
    >
      <h2
        class="mb-0 font-heading text-2xl font-medium"
      >
        Treasury & Payouts
      </h2>
      <div
        class="mt-5 flex flex-col items-center gap-4"
      >
        <div
          class="flex w-full items-center gap-4"
        >
          <div
            class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col gap-2"
          >
            <h3
              class="text-grey-60 font-body0 mb-0 whitespace-nowrap text-sm font-medium dark:text-slate-200"
            >
              Treasury balance
            </h3>
            <span
              class="font-heading text-xl font-medium"
            >
              210 ETH
            </span>
          </div>
          <div
            class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col gap-2"
          >
            <h3
              class="text-grey-60 font-body0 mb-0 whitespace-nowrap text-sm font-medium dark:text-slate-200"
            >
              Overflow
            </h3>
            <span
              class="font-heading text-xl font-medium"
            >
              210 ETH
            </span>
          </div>
          <div
            class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col gap-2"
          >
            <h3
              class="mb-0 whitespace-nowrap font-body text-sm font-medium dark:text-slate-200"
            >
              Available to pay out
            </h3>
            <span
              class="font-heading text-xl font-medium"
            >
              210 ETH
            </span>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col pb-8"
        >
          <div
            class="flex items-center justify-between gap-3"
          >
            <h3
              class="mb-0 whitespace-nowrap font-body text-sm font-medium dark:text-slate-200"
            >
              Payouts
            </h3>
            <svg
              aria-hidden="true"
              class="h-6 w-6"
              fill="none"
              role="button"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 12.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 18.75a.75.75 0 110-1.5.75.75 0 010 1.5z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <table
            class="mt-4 w-full"
          >
            <tbody>
              <tr
                class="flex items-center justify-between gap-3 border-b border-grey-200 py-3 dark:border-slate-500"
              >
                <td
                  class="flex items-center gap-3"
                >
                  <div
                    class="h-8 w-8 rounded-full bg-juice-400"
                  />
                  <span
                    class="font-medium"
                  >
                    aeolian.eth
                  </span>
                </td>
                <td
                  class="flex items-center gap-3"
                >
                  <span>
                    210 ETH
                  </span>
                  <span>
                    33%
                  </span>
                </td>
              </tr>
              <tr
                class="flex items-center justify-between gap-3 border-b border-grey-200 py-3 dark:border-slate-500"
              >
                <td
                  class="flex items-center gap-3"
                >
                  <div
                    class="h-8 w-8 rounded-full bg-juice-400"
                  />
                  <span
                    class="font-medium"
                  >
                    wraeth.eth
                  </span>
                </td>
                <td
                  class="flex items-center gap-3"
                >
                  <span>
                    210 ETH
                  </span>
                  <span>
                    33%
                  </span>
                </td>
              </tr>
              <tr
                class="flex items-center justify-between gap-3 border-b border-grey-200 py-3 dark:border-slate-500"
              >
                <td
                  class="flex items-center gap-3"
                >
                  <div
                    class="h-8 w-8 rounded-full bg-juice-400"
                  />
                  <span
                    class="font-medium"
                  >
                    chris.eth
                  </span>
                </td>
                <td
                  class="flex items-center gap-3"
                >
                  <span>
                    210 ETH
                  </span>
                  <span>
                    33%
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
          <button
            class="ant-btn ant-btn-primary mt-6 flex w-fit items-center gap-3 self-end"
            type="button"
          >
            Send payouts
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentUpcomingSubPanel renders a skeleton when loading "upcoming" 1`] = `
<div>
  <div>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex gap-4"
      >
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[127px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Cycle #
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full max-w-[142px]"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Status
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              Active
            </div>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex-1"
        >
          <div
            class="flex flex-col gap-2 text-sm font-medium text-grey-600 dark:text-slate-200"
          >
            Cycle length
            <div
              class="font-heading text-2xl font-medium dark:text-slate-50"
            >
              1 day
            </div>
          </div>
        </div>
      </div>
      <div>
        Configuration
      </div>
    </div>
    <div
      class="mt-12"
    >
      <h2
        class="mb-0 font-heading text-2xl font-medium"
      >
        Treasury & Payouts
      </h2>
      <div
        class="mt-5 flex flex-col items-center gap-4"
      >
        <div
          class="flex w-full items-center gap-4"
        >
          <div
            class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col gap-2"
          >
            <h3
              class="text-grey-60 font-body0 mb-0 whitespace-nowrap text-sm font-medium dark:text-slate-200"
            >
              Treasury balance
            </h3>
            <span
              class="font-heading text-xl font-medium"
            >
              210 ETH
            </span>
          </div>
          <div
            class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col gap-2"
          >
            <h3
              class="text-grey-60 font-body0 mb-0 whitespace-nowrap text-sm font-medium dark:text-slate-200"
            >
              Overflow
            </h3>
            <span
              class="font-heading text-xl font-medium"
            >
              210 ETH
            </span>
          </div>
          <div
            class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col gap-2"
          >
            <h3
              class="mb-0 whitespace-nowrap font-body text-sm font-medium dark:text-slate-200"
            >
              Available to pay out
            </h3>
            <span
              class="font-heading text-xl font-medium"
            >
              210 ETH
            </span>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 flex w-full flex-col pb-8"
        >
          <div
            class="flex items-center justify-between gap-3"
          >
            <h3
              class="mb-0 whitespace-nowrap font-body text-sm font-medium dark:text-slate-200"
            >
              Payouts
            </h3>
            <svg
              aria-hidden="true"
              class="h-6 w-6"
              fill="none"
              role="button"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 12.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 18.75a.75.75 0 110-1.5.75.75 0 010 1.5z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <table
            class="mt-4 w-full"
          >
            <tbody>
              <tr
                class="flex items-center justify-between gap-3 border-b border-grey-200 py-3 dark:border-slate-500"
              >
                <td
                  class="flex items-center gap-3"
                >
                  <div
                    class="h-8 w-8 rounded-full bg-juice-400"
                  />
                  <span
                    class="font-medium"
                  >
                    aeolian.eth
                  </span>
                </td>
                <td
                  class="flex items-center gap-3"
                >
                  <span>
                    210 ETH
                  </span>
                  <span>
                    33%
                  </span>
                </td>
              </tr>
              <tr
                class="flex items-center justify-between gap-3 border-b border-grey-200 py-3 dark:border-slate-500"
              >
                <td
                  class="flex items-center gap-3"
                >
                  <div
                    class="h-8 w-8 rounded-full bg-juice-400"
                  />
                  <span
                    class="font-medium"
                  >
                    wraeth.eth
                  </span>
                </td>
                <td
                  class="flex items-center gap-3"
                >
                  <span>
                    210 ETH
                  </span>
                  <span>
                    33%
                  </span>
                </td>
              </tr>
              <tr
                class="flex items-center justify-between gap-3 border-b border-grey-200 py-3 dark:border-slate-500"
              >
                <td
                  class="flex items-center gap-3"
                >
                  <div
                    class="h-8 w-8 rounded-full bg-juice-400"
                  />
                  <span
                    class="font-medium"
                  >
                    chris.eth
                  </span>
                </td>
                <td
                  class="flex items-center gap-3"
                >
                  <span>
                    210 ETH
                  </span>
                  <span>
                    33%
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
          <button
            class="ant-btn ant-btn-primary mt-6 flex w-fit items-center gap-3 self-end"
            type="button"
          >
            Send payouts
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
